Install basic packages

--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -19,9 +19,13 @@ modules:
 
   - type: rpm-ostree
     repos: # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
+      - https://pkgs.tailscale.com/stable/fedora/tailscale.repo
+      - https://packages.microsoft.com/yumrepos/vscode/config.repo
     install:
-      # - micro
-      # - starship
+      - tailscale
+      - code
+      - firefox
+      
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
