--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -24,13 +24,14 @@ modules:
     install:
       - tailscale
       - code
-      - firefox
-      
     remove:
       # example: removing firefox (in favor of the flatpak)
-      # "firefox" is the main package, "firefox-langpacks" is a dependency
-      # - firefox
-      # - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
+      - firefox
+
+  - type: systemd
+    system:
+      enabled:
+        - tailscaled
 
   - type: default-flatpaks
     notify: true # Send notification after install/uninstall is finished (true/false)
@@ -40,13 +41,11 @@ modules:
       # repo-name: flathub
       # repo-title: "Flathub (system-wide)" # Optional; this sets the remote's user-facing name in graphical frontends like GNOME Software
       install:
-        # - org.mozilla.firefox
-        # - org.gnome.Loupe
-        # - one.ablaze.floorp//lightning # This is an example of flatpak which has multiple branches in selection (flatpak//branch).
-        # Flatpak runtimes are not supported (like org.winehq.Wine//stable-23.08),
-
-      # only normal flatpak applications are (like Floorp Lightning web browser in this example).
-      # Installing different branches of the same Flatpak is not supported.
+        - org.gnome.Loupe
+        - org.mozilla.firefox
+        - md.obsidian.Obsidian
+        - com.discordapp.Discord
+        - com.spotify.Client
       remove:
         # - org.gnome.eog
 
