--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -20,13 +20,9 @@ modules:
   - type: rpm-ostree
     repos: # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
       - https://pkgs.tailscale.com/stable/fedora/tailscale.repo
-      - https://packages.microsoft.com/yumrepos/vscode/config.repo
     install:
       - tailscale
-      - code
     remove:
-      - firefox
-      - firefox-langpacks
 
   - type: systemd
     system:
@@ -41,11 +37,18 @@ modules:
       # repo-name: flathub
       # repo-title: "Flathub (system-wide)" # Optional; this sets the remote's user-facing name in graphical frontends like GNOME Software
       install:
+        - org.gnome.Evince
         - org.gnome.Loupe
+        - org.gnome.gedit
+        - org.gnome.clocks
         - org.mozilla.firefox
+        - org.mozilla.Thunderbird
+        - org.onlyoffice.desktopeditors
         - md.obsidian.Obsidian
+        - com.visualstudio.code
         - com.discordapp.Discord
         - com.spotify.Client
+        - com.nextcloud.desktopclient.nextcloud
       remove:
         # - org.gnome.eog
 
