--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -1,3 +1,6 @@
+---
+# yaml-language-server: $schema=https://schema.blue-build.org/recipe-v1.json
+
 # image will be published to ghcr.io/<user>/<name>
 name: my-ublue
 # description will be included in the image's metadata
@@ -25,6 +28,8 @@ modules:
       - firefox
       - langpacks-en_GB
       - langpacks-nl
+      - podman
+      - toolbox
     remove:
 
   - type: systemd
