--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -23,9 +23,11 @@ modules:
   - type: rpm-ostree
     repos: # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
       - https://pkgs.tailscale.com/stable/fedora/tailscale.repo
+      - https://packages.microsoft.com/yumrepos/vscode
     install:
       - tailscale
       - firefox
+      - vscode
       - langpacks-en_GB
       - langpacks-nl
       - podman
@@ -58,11 +60,7 @@ modules:
         - org.mozilla.Thunderbird
         - org.onlyoffice.desktopeditors
         - md.obsidian.Obsidian
-        - com.visualstudio.code
-        - com.discordapp.Discord
-        - com.spotify.Client
         - com.nextcloud.desktopclient.nextcloud
-        - de.haeckerfelix.Fragments
         - com.valvesoftware.Steam
         - com.usebottles.bottles
 
