--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -23,11 +23,11 @@ modules:
   - type: rpm-ostree
     repos: # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
       - https://pkgs.tailscale.com/stable/fedora/tailscale.repo
-      - https://packages.microsoft.com/yumrepos/vscode
+      - https://packages.microsoft.com/yumrepos/vscode/config.repo
     install:
       - tailscale
       - firefox
-      - vscode
+      - code
       - langpacks-en_GB
       - langpacks-nl
       - podman
@@ -46,6 +46,7 @@ modules:
     install:
       - 1password
 
+  # Default flatpaks installed system-wide. User can install flatpaks in home as well
   - type: default-flatpaks
     notify: true # Send notification after install/uninstall is finished (true/false)
     system:
@@ -58,7 +59,11 @@ modules:
         - org.gnome.Loupe
         - org.gnome.gedit
         - org.gnome.clocks
-        - org.mozilla.Thunderbird
+        - org.gnome.Calendar
+        - org.gnome.Calculator
+        - org.gnome.gitlab.somas.Apostrophe
+        - io.gitlab.news_flash.NewsFlash
+        - org.gnome.Evolution
         - org.onlyoffice.desktopeditors
         - md.obsidian.Obsidian
         - com.nextcloud.desktopclient.nextcloud
