--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -24,6 +24,7 @@ modules:
     repos: # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
       - https://pkgs.tailscale.com/stable/fedora/tailscale.repo
       - https://packages.microsoft.com/yumrepos/vscode/config.repo
+      - https://mise.jdx.dev/rpm/mise.repo
     install:
       - tailscale
       - firefox
@@ -35,6 +36,7 @@ modules:
       - buildah
       - skopeo
       - chromium
+      - mise
     remove: []
 
   - type: systemd
