Attempt to resolve libnpp dependency conflict

--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -41,7 +41,8 @@ modules:
       - mise
       - keyd
       - cuda-toolkit
-    remove: []
+    remove: 
+      - libnpp-1
 
   - type: systemd
     system:
