--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -26,7 +26,7 @@ modules:
       - https://packages.microsoft.com/yumrepos/vscode/config.repo
       - https://mise.jdx.dev/rpm/mise.repo
       - https://copr.fedorainfracloud.org/coprs/alternateved/keyd/repo/fedora-%OS_VERSION%/alternateved-keyd-fedora-%OS_VERSION%.repo
-      - https://developer.download.nvidia.com/compute/cuda/repos/fedora%OS_VERSION%/x86_64/cuda-fedora%OS_VERSION%.repo
+      - https://developer.download.nvidia.com/compute/cuda/repos/fedora41/x86_64/cuda-fedora41.repo
     install:
       - tailscale
       - firefox
@@ -41,8 +41,7 @@ modules:
       - mise
       - keyd
       - cuda-toolkit
-    remove: 
-      - libnpp
+    remove: []
 
   - type: systemd
     system:
