Use rpm-ostree for installing eduvpn repo

--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -27,6 +27,9 @@ modules:
       - https://mise.jdx.dev/rpm/mise.repo
       - https://copr.fedorainfracloud.org/coprs/alternateved/keyd/repo/fedora-%OS_VERSION%/alternateved-keyd-fedora-%OS_VERSION%.repo
       - https://developer.download.nvidia.com/compute/cuda/repos/fedora%OS_VERSION%/x86_64/cuda-fedora%OS_VERSION%.repo
+      - eduvpn.repo
+    keys:
+      - https://app.eduvpn.org/linux/v4/rpm/app+linux@eduvpn.org.asc
     install:
       - tailscale
       - firefox
