Disable eduvpn-client until later fix

--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -44,7 +44,7 @@ modules:
       - mise
       - keyd
       - cuda-toolkit
-      - eduvpn-client
+      # - eduvpn-client
     remove: []
 
   - type: systemd
