--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -58,26 +58,25 @@ modules:
 
   # Default flatpaks installed system-wide. User can install flatpaks in home as well
   - type: default-flatpaks
-    notify: true # Send notification after install/uninstall is finished (true/false)
-    system:
-      # If no repo information is specified, Flathub will be used by default
-      # repo-url: https://dl.flathub.org/repo/flathub.flatpakrepo
-      # repo-name: flathub
-      # repo-title: "Flathub (system-wide)" # Optional; this sets the remote's user-facing name in graphical frontends like GNOME Software
-      install:
-        - org.gnome.Evince
-        - org.gnome.Loupe
-        - org.gnome.gedit
-        - org.gnome.clocks
-        - org.gnome.Calendar
-        - org.gnome.Calculator
-        - org.gnome.gitlab.somas.Apostrophe
-        - io.gitlab.news_flash.NewsFlash
-        - org.gnome.Evolution
-        - org.onlyoffice.desktopeditors
-        - md.obsidian.Obsidian
-        - com.nextcloud.desktopclient.nextcloud
-        - com.usebottles.bottles
-        - io.github.flattool.Warehouse
+    configurations:
+      - notify: true # Send notification after install/uninstall is finished (true/false)
+        scope: system
+        repo:
+          title: Flathub (system)
+        install:
+          - org.gnome.Evince
+          - org.gnome.Loupe
+          - org.gnome.gedit
+          - org.gnome.clocks
+          - org.gnome.Calendar
+          - org.gnome.Calculator
+          - org.gnome.gitlab.somas.Apostrophe
+          - io.gitlab.news_flash.NewsFlash
+          - org.gnome.Evolution
+          - org.onlyoffice.desktopeditors
+          - md.obsidian.Obsidian
+          - com.nextcloud.desktopclient.nextcloud
+          - com.usebottles.bottles
+          - io.github.flattool.Warehouse
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
